crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-4.2__tests__template_tests__templatetags__testtags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-4.2/tests/template_tests/templatetags/testtags.py
---
tag_rules: {}
filter_arities:
  "tests.template_tests.templatetags.testtags::filter::upper":
    expects_arg: false
    arg_optional: false
block_specs: {}
